--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
         "next": "13.5.5",
         "react": "^18",
         "react-code-blocks": "^0.1.4",
-        "react-dom": "^18",
-        "sharp": "^0.32.6"
+        "react-dom": "^18"
     },
     "devDependencies": {
         "@types/node": "^20",
